ZODB Requires:
~~~~~~~~~~~~~~
- Re-enter all properties whose names used to be *_str.

New features:
~~~~~~~~~~~~~
- Added isEditEntryAllowed to check for entry edit permission.
- Added Entry Local Roles, a way for ACLs to get additional computed roles.

Bug fixes:
~~~~~~~~~~
- LDAPDirectory now converts date fields between the LDAP time strings
  and DateTime objects.

New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Renamed writeEntry to editEntry.
- renaming properties '*_str' and used '*_c' for computed attribute
  foo_expression_str -> foo_expr, foo_expression -> foo_expr_c
  foo_str -> foo, foo -> foo_c